[package]
name = "rustop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["json", "tokio", "macros", "ws"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", features = ["full"] }
